more data files

--- a/mm_cnt.tex
+++ b/mm_cnt.tex
@@ -1,20 +1,40 @@
-BtwnnsAvrgDmtrAvrgCnnctvtyDgrAvrg 9
-BtwnnsAvrgDmtrMdnCnnctvtyDgrMn 2
-BtwnnsMdnDmtrAvrgCnnctvtyDgrMn 9
-BtwnnsMdnDmtrMxCnnctvtyDgrMx 14
-BtwnnsMdnDmtrAvrgCnnctvty 14
-BtwnnsMdDmtrAvrgCnnctvty 2
-BtwnnsMnDmtrAvrgDgrAvrg 4
-DmtrAvrgCnnctvtyDgrAvrg 16
-BtwnnsMdDmtrAvrgDgrMdn 11
-BtwnnsAvrgDmtrMdnDgrMn 18
-BtwnnsMdnDmtrAvrgDgrMn 7
-BtwnnsMnDmtrAvrgDgrMdn 7
-BtwnnsMnDmtrAvrgDgrMn 7
-BtwnnsMxCnnctvtyDgrMx 7
-DmtrAvrgCnnctvtyDgrMn 23
-BtwnnsAvrgCnnctvty 7
-BtwnnsMdnDgrAvrg 7
-BtwnnsMnDmtrAvrg 7
-BtwnnsMx 176
-DmtrAvrg 14
+BtwnnsAvrgDmtrAvrgCnnctvtyDgrAvrg
+16
+BtwnnsAvrgDmtrMdnCnnctvtyDgrMn
+2
+BtwnnsMdnDmtrAvrgCnnctvtyDgrMn
+2
+BtwnnsMdnDmtrMxCnnctvtyDgrMx
+14
+BtwnnsMdnDmtrAvrgCnnctvty
+14
+BtwnnsMdDmtrAvrgCnnctvty
+2
+BtwnnsMnDmtrAvrgDgrAvrg
+4
+DmtrAvrgCnnctvtyDgrAvrg
+30
+BtwnnsMdDmtrAvrgDgrMdn
+11
+BtwnnsAvrgDmtrMdnDgrMn
+11
+BtwnnsMdnDmtrAvrgDgrMn
+7
+BtwnnsMnDmtrAvrgDgrMdn
+7
+BtwnnsMnDmtrAvrgDgrMn
+0
+BtwnnsMxCnnctvtyDgrMx
+7
+DmtrAvrgCnnctvtyDgrMn
+2
+BtwnnsAvrgCnnctvty
+14
+BtwnnsMdnDgrAvrg
+7
+BtwnnsMnDmtrAvrg
+0
+BtwnnsMx
+120
+DmtrAvrg
+7
