latex table generator for learing results

--- a/m_8_1.tex
+++ b/m_8_1.tex
@@ -128,3 +128,27 @@ Write Avail & 8.65 & BtwnnsMdnDmtrAvrgCnnctvtyDgrMdn &   0.00 & BtwnnsMx &      
 \multicolumn{11}{c}{Read over Write 0.99} \\ \hline
 Read Avail & 8.34 & BtwnnsMdDmtrAvrgDgrMdn &            0.00 & BtwnnsMx &                         0.00 & BtwnnsMx &  1.07 & BtwnnsMdnDmtrAvrgCnnctvty &        66.48 & BtwnnsMdnDmtrMxDgrAvrg \\
 Write Avail & 8.65 & BtwnnsMdnDmtrAvrgCnnctvtyDgrMdn &   0.00 & BtwnnsMx &                         0.00 & BtwnnsMx &  0.85 & BtwnnsMdnDmtrAvrgCnnctvty &        138.31 & BtwnnsMnDmtrMxDgrAvrg \\ \hline
+
+% GP 2x4
+\subsubsection{Avail Measures}
+\multicolumn{11}{c}{Read over Write 0.01}
+Read Avail & 46.5544292366 & BtwnnsMdDmtrAvrgCnnctvtyDgrMdn  & 25.5144045521 & BtwnnsMxDmtrAvrgCnnctvtyDgrMdn    & 0.0000000000 & BtwnnsMx & 3.3955883534 & BtwnnsMdnDmtrAvrgDgrMx            & 61.4561015957 & BtwnnsMxDmtrAvrgCnnctvtyDgrAvrg  \\
+Write Avail & 52.5859988570 & BtwnnsAvrgDmtrMxCnnctvtyDgrMn   & 35.8804587124 & BtwnnsMdnDmtrAvrgCnnctvtyDgrMn    & 0.0000000000 & BtwnnsMx & 1.0946701435 & BtwnnsMdDmtrAvrgCnnctvtyDgrMd     & 114.0400599427 & BtwnnsAvrgDgrMn                \\ \hline
+\multicolumn{11}{c}{Read over Write 0.10}                                                                                                                                                                                                   
+Read Avail & 46.5544292366 & BtwnnsMdDmtrAvrgCnnctvtyDgrMdn  & 25.5144045521 & BtwnnsMxDmtrAvrgCnnctvtyDgrMdn    & 0.0000000000 & BtwnnsMx & 3.3955883534 & BtwnnsMdnDmtrAvrgDgrMx            & 61.4561015957 & BtwnnsMxDmtrAvrgCnnctvtyDgrAvrg  \\
+Write Avail & 52.5859988570 & BtwnnsAvrgDmtrMxCnnctvtyDgrMn   & 35.8804587124 & BtwnnsMdnDmtrAvrgCnnctvtyDgrMn    & 0.0000000000 & BtwnnsMx & 1.0946701435 & BtwnnsMdDmtrAvrgCnnctvtyDgrMd     & 114.0400599427 & BtwnnsAvrgDgrMn                \\ \hline
+\multicolumn{11}{c}{Read over Write 0.25}                                                                                                                                                                                                  
+Read Avail & 46.5544292366 & BtwnnsMdDmtrAvrgCnnctvtyDgrMdn  & 0.0000000000 & BtwnnsMx                           & 0.0000000000 & BtwnnsMx & 3.3955883534 & BtwnnsMdnDmtrAvrgDgrMx            & 61.4561015957 & BtwnnsMxDmtrAvrgCnnctvtyDgrAvrg  \\
+Write Avail & 52.5859988570 & BtwnnsAvrgDmtrMxCnnctvtyDgrMn   & 0.0000000000 & BtwnnsMx                           & 0.0000000000 & BtwnnsMx & 1.0946701435 & BtwnnsMdDmtrAvrgCnnctvtyDgrMd     & 114.0400599427 & BtwnnsAvrgDgrMn                \\ \hline
+\multicolumn{11}{c}{Read over Write 0.50}                                                                                                                                                                                                 
+Read Avail & 46.5544292366 & BtwnnsMdDmtrAvrgCnnctvtyDgrMdn  & 0.0000000000 & BtwnnsMx                           & 0.0000000000 & BtwnnsMx & 3.3955883534 & BtwnnsMdnDmtrAvrgDgrMx            & 61.4561015957 & BtwnnsMxDmtrAvrgCnnctvtyDgrAvrg  \\
+Write Avail & 52.5859988570 & BtwnnsAvrgDmtrMxCnnctvtyDgrMn   & 0.0000000000 & BtwnnsMx                           & 0.0000000000 & BtwnnsMx & 1.0946701435 & BtwnnsMdDmtrAvrgCnnctvtyDgrMd     & 114.0400599427 & BtwnnsAvrgDgrMn                \\ \hline
+\multicolumn{11}{c}{Read over Write 0.75}                                                                                                                                                                                                
+Read Avail & 46.5544292366 & BtwnnsMdDmtrAvrgCnnctvtyDgrMdn  & 0.0000000000 & BtwnnsMx                           & 0.0000000000 & BtwnnsMx & 3.3955883534 & BtwnnsMdnDmtrAvrgDgrMx            & 61.4561015957 & BtwnnsMxDmtrAvrgCnnctvtyDgrAvrg  \\
+Write Avail & 52.5859988570 & BtwnnsAvrgDmtrMxCnnctvtyDgrMn   & 0.0000000000 & BtwnnsMx                           & 0.0000000000 & BtwnnsMx & 1.0946701435 & BtwnnsMdDmtrAvrgCnnctvtyDgrMd     & 114.0400599427 & BtwnnsAvrgDgrMn                \\ \hline
+\multicolumn{11}{c}{Read over Write 0.90}                                                                                                                                                                                               
+Read Avail & 46.5544292366 & BtwnnsMdDmtrAvrgCnnctvtyDgrMdn  & 0.0000000000 & BtwnnsMx                           & 0.0000000000 & BtwnnsMx & 3.3955883534 & BtwnnsMdnDmtrAvrgDgrMx            & 61.4561015957 & BtwnnsMxDmtrAvrgCnnctvtyDgrAvrg  \\
+Write Avail & 52.5859988570 & BtwnnsAvrgDmtrMxCnnctvtyDgrMn   & 0.0000000000 & BtwnnsMx                           & 0.0000000000 & BtwnnsMx & 1.0946701435 & BtwnnsMdDmtrAvrgCnnctvtyDgrMd     & 114.0400599427 & BtwnnsAvrgDgrMn                \\ \hline
+\multicolumn{11}{c}{Read over Write 0.99}                                                                                                                                                                                              
+Read Avail & 46.5544292366 & BtwnnsMdDmtrAvrgCnnctvtyDgrMdn  & 0.0000000000 & BtwnnsMx                           & 0.0000000000 & BtwnnsMx & 3.3955883534 & BtwnnsMdnDmtrAvrgDgrMx            & 61.4561015957 & BtwnnsMxDmtrAvrgCnnctvtyDgrAvrg  \\
+Write Avail & 52.5859988570 & BtwnnsAvrgDmtrMxCnnctvtyDgrMn   & 0.0000000000 & BtwnnsMx                           & 0.0000000000 & BtwnnsMx & 1.0946701435 & BtwnnsMdDmtrAvrgCnnctvtyDgrMd     & 114.0400599427 & BtwnnsAvrgDgrMn                \\ \hline
